# FastRampUp

./: .gitignore  C++14_In_Embedded_Systems.cpp
AI/: mnist.ipynb
AI/AdvancedRag/: .env  AdvancedRag.py
AI/CoffeeShopRevenue/: CoffeeShopRevenuePrediction.ipynb
AI/MnistQuantization/: mnist.ipynb  mnist.keras  mnist.py  mnist_tf_fp16_model.tflite  mnist_tf_int8_model.tflite  mnist_tf_model.tflite
AI/Rag/: ChainOfHFModels.ipynb  Rag.ipynb
AI/mobilenetv3/: launch.json  mobilenetV3.py
Bootstrap/: containers_fluid.html
C++_Ramp_up/: ADL.cpp  AddToVectorIdiom.cpp  AliasingIssue.cpp  Auto.cpp  AutoFails.cpp  BracedInitialization.cpp  CircularDependency.cpp  ConstMethod.cpp  Constexpr.cpp  Constructors.cpp  CopyElision.cpp  CppCoreGuide_Functions.cpp  CppCoreGuide_Interfaces.cpp  DecltType.cpp  DeleteFunctions.cpp  FreeFunctions.cpp  FunctionRefQualifiers.cpp  GenerateCodeCompileTemplates.cpp  ImplSeparationTemplates.cpp  ImplicitConversions.cpp  Initializations.cpp  IteratorForCustomContainer.cpp  Lambdas.cpp  MarkFuncOverriden.cpp  MemoryPoolSmartPointers.cpp  MethodDisplatching.cpp  MostVexingParse.cpp  MutableKeyword.cpp  NoExcept.cpp  Nullptr.cpp  OperatorsOverloading.cpp  Optional.cpp  OverloadOnRef.cpp  OverloadResolution.cpp  OverloadingOnTemplates.cpp  PointerDecayProblem.cpp  RuleOfFive_Three.cpp  RvalueRef.cpp  RvoNrvoCopyElision.cpp  ScopedEnums.cpp  (+22 more)
C++_Ramp_up/ArmIntrinsics/: Addition.cpp  Count.cpp  GetMax.cpp  SumVector.cpp  VectorSumA32.cpp
C++_Ramp_up/Async/: Async.cpp  Makefile  async
C++_Ramp_up/BoostExamples/: CMakeLists.txt
C++_Ramp_up/BoostExamples/Example1/: CMakeLists.txt
C++_Ramp_up/BoostExamples/Example1/src/: main.cpp
C++_Ramp_up/C++2a/: auto_instead_of_T.cpp  concepts_from_std.cpp  concepts_with_classes.cpp  concepts_with_functions.cpp  custom_concepts.cpp  examples_of_views_ranges.cpp  innerLambda.cpp  lambda.cpp  lambda_generic.cpp  lambda_init_capture.cpp  projections.cpp  ranges.cpp  sortedVec.cpp  structure_binding.cpp  views.cpp
C++_Ramp_up/CacheVsTimeComplexity/: CMakeLists.txt  conanfile.txt
C++_Ramp_up/Coroutine/: coroutine.cpp
C++_Ramp_up/CppCoreGuidlines/: ClassAndStruct.cpp  ClassConstructExample.cpp  Constructors.cpp  CppCoreGuide_Functions.cpp  CppCoreGuide_Initialization.cpp  CppExpresions.cpp  NoExcept.cpp
C++_Ramp_up/DataStructures/: GraphTraversal.cpp  Heap.cpp
C++_Ramp_up/DesignPatterns/: Adapter.cpp  Bridge_Os_Gui.cpp  Builder.cpp  Command.cpp  Decorator.cpp  DecoratorNonTemplate.cpp  DependencyInjection.cpp  ExternalPolimorphism_SilverBullet.cpp  Factory.cpp  Strategy.cpp  StrategyTemplate.cpp  Template.cpp  TemplateCompileTime.cpp  TypeErasure.cpp
C++_Ramp_up/FalseSharingBenchmark/: CMakeLists.txt
C++_Ramp_up/GBenchmark/: CMakeLists.txt
C++_Ramp_up/GBenchmark/src/: dummy_benchmark.cpp
C++_Ramp_up/InlineVariables/: header.hpp  main.cpp  source.cpp
C++_Ramp_up/JsonTutorial/: CMakeLists.txt  api.hpp  main.cpp
C++_Ramp_up/JsonTutorial/dataset/: generateData.py
C++_Ramp_up/JsonTutorial/tests/: CMakeLists.txt
C++_Ramp_up/Lambdas/: AdditionalLambdaConcepts.cpp  Lambdas.cpp
C++_Ramp_up/Multithreading/: Barriers.md  doubleBuffering.c
C++_Ramp_up/OOP/: Friends.cpp  ImplicitlyDefinedFunctions.cpp  NestedClasses.cpp  OperatorsOverloading.cpp  nested
C++_Ramp_up/Optimizations/DataPacking/: CMakeLists.txt  Readme.md  conanfile.txt
C++_Ramp_up/Optimizations/DataPacking/src/: dataPacking.cpp
C++_Ramp_up/Optimizations_LowLatency/: crtp.cpp
C++_Ramp_up/PPM_format/: main  main.cpp
C++_Ramp_up/Pimp/: Makefile  PrivateImp.cpp  header.h  main  main.cpp
C++_Ramp_up/Sfml/: CMakeLists.txt  Readme.md
C++_Ramp_up/SnippetsFromOpenSourceProjects/: InsertCodeIntoExternalClass.cpp
C++_Ramp_up/StdAlgorithms/: movement.cpp  partition.cpp  searching.cpp
C++_Ramp_up/Templates/: ClassPartialSpecSameType.hpp  NotConst.cpp  PartialSpecializationFunction.hpp  Templates.cpp  chronoLib.cpp  classAndMethodTemplate.cpp  customizationPoint.cpp  decide_type_based_on_enum_value.cpp  fibonaci.cpp  function_templates.cpp  neuralnet.cpp  param_pack.cpp  printContainerAndValueType.cpp  tinyInt.cpp
C++_Ramp_up/Variant/: usefullVariant.cpp  variant.cpp
C++_Ramp_up/gmock_example/: CMakeLists.txt  test.cpp
Css/: ViewPortSize
JsRampUp/: index.html
MapMemory/: memory_mapped  memory_mapped_file.cpp  myfile  request_memory.cpp
Processes/: Exec
Python3RampUp/: BFS.py  CHEATSHEET  GIL  IdentityEqualAlias.py  InstantiationAndInitialization.py  MutableImutable.py  ShallowDeepCopy.py  abstractClass.py  anyAndall.py  argsKwargs.py  assert.py  classMethodStaticInstance.py  classVarAndInstanceVar.py  createClasses.py  customeExceptions.py  decorators.py  decorators_args.py  dictOverwriteKeys.py  dissasembly.py  equalVsIdentity.py  functions.py  functions_callableObjects.py  functions_lambda.py  inspectMethod.py  joinFunction.py  namedTuple.py  namingConvUnderscores.py  oneStatementPerLine.py  serialization.py  shallowVsDeepCopy.py  sortedDict.py  sortingDict.py  strAndRepr.py  stringFormating.py  switchWithDict.py  withStatement.py  withStatementExample.py
SharedMem_and_Semaphores/: main.cpp  sempahore
SharedObjects/: README.md  sharedObject.cpp
Shell/: awkCommand.sh  expansion_brace.sh  expansion_filename.sh  export_source.sh  findCommand.sh  loop.sh  loop_through_deps.sh  popularCommands.sh  quotes.sh  substitutions.sh  tests.sh  xargs.sh
Signals/: README.md
WebServer/: CMakeLists.txt  README.md  startMultipleClients.py
WebServer/client/: CMakeLists.txt  client.cpp
WebServer/server/: CMakeLists.txt  server.cpp
(+201 files in other folders)
